jktmyanmarint.com/assets/css/main.css
/* ... */
.date-picker.open {
    max-height: 400px;
}

.date-picker.open .input button {
    background: #42a4e6;
}


/* Consultant end */


/* CONTACT PAGE START */

.contact-header {
    font-family: "Roboto", sans-serif;
    font-weight: 600;
    font-size: 27px;
    line-height: 32px;
    color: #131313;
    /* margin-top: 77%; */
}


/* #contact-form {
  padding-right: 150px;
  height: 100%;
  width: 50% !important;
} */

.map iframe {
    left: 5%;
    top: 10px;
    height: 50%;
    width: 90%;
    position: absolute;
    z-index: 3;
    border: 1px solid lightgrey;
    margin-bottom: 5%;
}

.load-map {
    position: absolute;
    top: 15%;
    z-index: 2;
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 0%;
    width: 100%;
}

.lds-ripple {
    display: inline-block;
    position: relative;
    width: 90px;
    height: 90px;
    margin: 0 auto;
}

.lds-ripple div {
    position: absolute;
    border: 4px solid #5bafe7;
    opacity: 1;
    border-radius: 50%;
    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
}

.lds-ripple div:nth-child(2) {
    animation-delay: -0.5s;
}

@keyframes lds-ripple {
    0% {
        top: 50px;
        left: 50px;
        width: 0;
        height: 0;
        opacity: 1;
    }
    100% {
        top: 0px;
        left: 0px;
        width: 100px;
        height: 100px;
        opacity: 0;
    }
}

.fb-iframe {
    /* display: block; */
    /* border: 1px solid lightgrey; */
    margin-left: auto;
    margin-right: auto;
    height: 807px;
    overflow: hidden;
    padding-top: 7px;
    width: 100%;
}

.ifr {
    display: block;
    margin-left: auto;
    margin-right: auto;
    overflow: hidden;
    padding-top: 7px;
    width: 500px;
}


/* width */

iframe::-webkit-scrollbar {
    width: 3px;
}


/* Track */

iframe::-webkit-scrollbar-track {
    background: #f1f1f1;
}


/* Handle */

iframe::-webkit-scrollbar-thumb {
    background: #888;
}


/* Handle on hover */

iframe::-webkit-scrollbar-thumb:hover {
    background: #555;
}

.contact-form input,
.contact-form textarea,
.contact-form select {
    display: block;
    width: 90%;
    /* margin-left: 6%; */
    margin-top: 20px;
    height: 50px;
    border: none;
    border: 1px solid rgba(138, 138, 138, 0.3);
    padding: 20px;
    border-radius: 3px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    -ms-border-radius: 3px;
    -o-border-radius: 3px;
}

.contact-form #message {
    height: 150px;
    resize: none;
}

.contact-form *:focus {
    outline: none;
    box-shadow: none;
}

#btn-submit {
    /* margin-left: 6%; */
    padding: 0;
    margin-top: 20px;
    display: inline;
    width: 150px;
    font-family: "Roboto", sans-serif;
    font-size: 14px;
    font-weight: 400;
    border: 1px solid #131313;
    letter-spacing: 3px;
    line-height: 60px;
    height: 60px;
    background-color: #ffffff;
}

#btn-submit:hover {
    background-color: #000000;
    color: #ffffff;
    transition: all 0.5s ease;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -ms-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
}

.address-row {
    display: flex;
    justify-content: start;
    align-items: flex-start;
    line-height: 1.8;
}

.address-row i {
    /* margin-top: 5px; */
    margin-right: 20px;
}

.address-row .title,
.address-row .title a {
    color: #2a2a31;
    font-family: "Roboto", sans-serif;
    font-weight: 600;
    font-size: 16px;
    line-height: 2;
    display: block;
}

.address-row .text {
    color: #8a8a8a;
    font-weight: 300;
    font-size: 14px;
    line-height: 26px;
}

.address-row .title a:hover {
    text-decoration: underline;
}

.address-row img {
    width: 25px;
    margin-right: 20px;
}


/* CONTACT PAGE END */


/* ACTIVITY PAGE START */

.blog {
    box-shadow: 0 1px 5px 0 rgba(128, 128, 128, 0.3);
    width: 60%;
}

.activity-blog {
    width: 100%;
    height: 650px;
    position: relative;
    margin-bottom: 20px;
}

.blog-cover {
    position: absolute;
    top: 0;
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.blog-date {
    position: absolute;
    z-index: 1;
    bottom: -20px;
    left: 40px;
}

.blog-date {
    background-color: #000000;
    color: #ffffff;
    padding: 10px 30px;
    border-radius: 5px;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    -ms-border-radius: 5px;
    -o-border-radius: 5px;
    cursor: default;
}

.blog-date:hover {
    background-color: rgba(19, 19, 19, 0.5);
    transition: all 0.2s ease;
    -webkit-transition: all 0.2s ease;
    -moz-transition: all 0.2s ease;
    -ms-transition: all 0.2s ease;
    -o-transition: all 0.2s ease;
}

.blog-date p {
    margin: 0;
}

.blog-day {
    font-family: "Roboto", sans-serif;
    font-size: 30px;
    font-weight: 40px;
    padding-bottom: 5px;
}

.activity-gallery {
    width: 100%;
    margin: 0 auto;
}

.activity-gallery img {
    display: block;
    height: 200px;
    object-fit: cover;
    cursor: pointer;
}

.activity-description {
    width: 100%;
    padding: 10px 30px;
}

.activity-title {
    font-family: "Roboto", sans-serif;
    font-size: 24px;
    font-weight: 600;
    margin-bottom: 15px;
    color: #131313;
}

.activity-text {
    line-height: 1.5em;
    text-align: justify;
    color: #808080;
    font-size: 15px;
}

.gallery-wrap {
    width: 80%;
    margin-top: 20px;
}

.gallery-wrap h3 {
    font-family: "Roboto", sans-serif;
    font-size: 24px;
    font-weight: bold;
    color: #131313;
}

.gallery-img {
    height: 200px;
    object-fit: cover;
    margin: 30px 0 0 0;
    cursor: pointer;
}

.gallery-overlay {
    position: fixed;
    top: 100;
    left: 0;
    right: 0;
    bottom: 0;
    height: 100vh;
    width: 100%;
    z-index: 21;
    display: none;
    background-color: rgba(0, 0, 0, 0.8);
    cursor: url(../images/icon/minus-sign.png), auto;
}
/* ... */

